--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
         </div>
         <nav class="header__sub-menu">
             <div class="header__sub-menu-item header__sub-menu-item--square">
-                <a href="" class="header__link">Главная</a>
+                    <a href="" class="header__link">Главная</a>
                 <div class="splitter__white"></div>
             </div>
             <div class="header__sub-menu-item">
@@ -598,11 +598,8 @@
         </div>
     </div>
     <nav class="footer__sub-menu">
-        <div class="footer__sub-menu-item-square">
-            <div class="sub-menu-item-square__title">
-                <img src="img/footer/03.png" alt="">
-                <a href="" class="footer__link">Главная</a>
-            </div>
+        <div class="footer__sub-menu-item footer__sub-menu-item--square">
+            <a href="" class="footer__link">Главная</a>
             <div class="splitter"></div>
         </div>
         <div class="footer__sub-menu-item">
