--- a/app/pages/product-catalog.html
+++ b/app/pages/product-catalog.html
@@ -20,58 +20,41 @@
                 </div>
                 <div class="product-catalog__wrapper">
                     <div class="product-catalog__card-lists">
-                        <div class="product-catalog__card product-catalog-card">
-                            <div class="product-catalog-card__img">
-                                <img src="img/product-catalog/1.png" alt="">
-                            </div>
-                            <div class="product-catalog-card__title">Триплексные насосы</div>
-                        </div>
-                        <div class="product-catalog__card product-catalog-card">
-                            <div class="product-catalog-card__img">
-                                <img src="img/product-catalog/2.png" alt="">
-                            </div>
-                            <div class="product-catalog-card__title">Смесительные агрегаты</div>
-                        </div>
-                        <div class="product-catalog__card product-catalog-card">
-                            <div class="product-catalog-card__img">
-                                <img src="img/product-catalog/3.png" alt="">
-                            </div>
-                            <div class="product-catalog-card__title">Компактные системы
+                        <a class="product-catalog__card" href="#">
+                            <img class="product-catalog__img"src="img/product-catalog/1.png" alt="">
+                            <div class="product-catalog__title">Триплексные насосы</div>
+                        </a>
+                        <a class="product-catalog__card" href="#">
+                            <img class="product-catalog__img"src="img/product-catalog/2.png" alt="">
+                            <div class="product-catalog__title">Смесительные агрегаты</div>
+                        </a>
+                        <a class="product-catalog__card" href="#">
+                            <img class="product-catalog__img"src="img/product-catalog/3.png" alt="">
+                            <div class="product-catalog__title">Компактные системы
                                 для струйной цементации
                                 Jet Grouting
                             </div>
-                        </div>
-                        <div class="product-catalog__card product-catalog-card">
-                            <div class="product-catalog-card__img">
-                                <img src="img/product-catalog/4.png" alt="">
-                            </div>
-                            <div class="product-catalog-card__title">Инъекционные агрегаты</div>
-                        </div>
-                    </div>
-                    <div class="product-catalog__card-lists">
-                        <div class="product-catalog__card product-catalog-card">
-                            <div class="product-catalog-card__img">
-                                <img src="img/product-catalog/5.png" alt="">
-                            </div>
-                            <div class="product-catalog-card__title">Триплексные насосы</div>
-                        </div>
-                        <div class="product-catalog__card product-catalog-card">
-                            <div class="product-catalog-card__img">
-                                <img src="img/product-catalog/6.png" alt="">
-                            </div>
-                            <div class="product-catalog-card__title">Контейнерные инъекционные агрегаты</div>
-                        </div>
-                        <div class="product-catalog__card product-catalog-card">
-                            <div class="product-catalog-card__img">
-                                <img src="img/product-catalog/7.png" alt="">
-                            </div>
-                            <div class="product-catalog-card__title">Силосы для сыпучих материалов</div>
-                        </div>
-                        <div class="product-catalog__card product-catalog-card">
-                            <div class="product-catalog-card__img">
-                                <img src="img/product-catalog/8.png" alt="">
-                            </div>
-                            <div class="product-catalog-card__title">Буровая колонна</div>
+                        </a>
+                        <a class="product-catalog__card" href="#">
+                            <img class="product-catalog__img"src="img/product-catalog/4.png" alt="">
+                            <div class="product-catalog__title">Инъекционные агрегаты</div>
+                        </a>
+                        <a class="product-catalog__card" href="#">
+                            <img class="product-catalog__img"src="img/product-catalog/5.png" alt="">
+                            <div class="product-catalog__title">Триплексные насосы</div>
+                        </a>
+                        <a class="product-catalog__card" href="#">
+                            <img class="product-catalog__img"src="img/product-catalog/6.png" alt="">
+                            <div class="product-catalog__title">Контейнерные инъекционные агрегаты</div>
+                        </a>
+                        <a class="product-catalog__card" href="#">
+                            <img class="product-catalog__img"src="img/product-catalog/7.png" alt="">
+                            <div class="product-catalog__title">Силосы для сыпучих материалов</div>
+                        </a>
+                        <a class="product-catalog__card" href="#">
+                            <img class="product-catalog__img"src="img/product-catalog/8.png" alt="">
+                            <div class="product-catalog__title">Буровая колонна</div>
+                        </a>
                         </div>
                     </div>
                 </div>
