--- a/app/product-about.html
+++ b/app/product-about.html
@@ -44,11 +44,8 @@
             </div>
         </div>
         <nav class="header-black__sub-menu">
-            <div class="header-black__sub-menu-item-square">
-                <div class="sub-menu-item-square__title">
-                    <img src="img/header-black/03.png" alt="">
+            <div class="header-black__sub-menu-item header__sub-menu-item--square">
                     <a href="" class="header-black__link">Главная</a>
-                </div>
                 <div class="splitter"></div>
             </div>
             <div class="header-black__sub-menu-item">
@@ -144,30 +141,29 @@
         <main class="main">
             <div class="_container">
                 <div class="product-about-wrapper">
-                    <div class="product-about-wrapper__name name">
-                        <div class="name__img">
-                            <img src="img/product-information/1.png" alt="">
-                        </div>
-                        <div class="name__info">
-                            <div class="name__title">Название товара</div>
-                            <div class="name__text">Lorem Ipsum has been the industry's
+                    <div class="product-about-wrapper__name">
+                        <img class="product-about-wrapper__img product-about-image"src="img/product-information/1.png" alt="">
+                        <div class="product-about-wrapper__info">
+                        <div class="product-about-wrapper__title">Название товара</div>
+                        <div class="product-about-wrapper__text">Lorem Ipsum has been the industry's
                                 standard dummy text ever since the 1500s,
                                 when an unknown printer took a galley of
                                 type and scrambled it to make a type
                                 specimen book. It has survived not only
                                 five centuries, but also the leap into
                                 electronic typesetting,
-                            </div>
-                            <a href="" class="name__button">Оставить заявку</a>
                         </div>
+                        <a class="product-about-wrapper__button" href="#">Оставить заявку</a>
                     </div>
-                    <div class="product-about-wrapper__images images">
-                        <img src="img/product-information/2.png" alt="">
-                        <img src="img/product-information/3.png" alt="">
                     </div>
-                    <div class="product-about-wrapper__document document">
-                        <img src="img/product-information/4.png" alt="">
-                    </div>
+
+                </div>
+                <div class="product-about-wrapper__images">
+                    <img  class="product-about-image" src="img/product-information/2.png" alt="">
+                    <img  class="product-about-image"  src="img/product-information/3.png" alt="">
+                </div>
+                <img class="product-about-wrapper__document"  src="img/product-information/4.png" alt="">
+
                 </div>
             </div>
         </main>
@@ -202,11 +198,8 @@
         </div>
     </div>
     <nav class="footer__sub-menu">
-        <div class="footer__sub-menu-item-square">
-            <div class="sub-menu-item-square__title">
-                <img src="img/footer/03.png" alt="">
-                <a href="" class="footer__link">Главная</a>
-            </div>
+        <div class="footer__sub-menu-item footer__sub-menu-item--square">
+            <a href="" class="footer__link">Главная</a>
             <div class="splitter"></div>
         </div>
         <div class="footer__sub-menu-item">
