--- a/app/news.html
+++ b/app/news.html
@@ -366,11 +366,8 @@
         </div>
     </div>
     <nav class="footer__sub-menu">
-        <div class="footer__sub-menu-item-square">
-            <div class="sub-menu-item-square__title">
-                <img src="img/footer/03.png" alt="">
-                <a href="" class="footer__link">Главная</a>
-            </div>
+        <div class="footer__sub-menu-item footer__sub-menu-item--square">
+            <a href="" class="footer__link">Главная</a>
             <div class="splitter"></div>
         </div>
         <div class="footer__sub-menu-item">
