--- a/app/pages/product-catalog-about.html
+++ b/app/pages/product-catalog-about.html
@@ -18,25 +18,28 @@
         <div class="product-catalog-about page-padding">
             <div class="product-catalog-about__top">
                 <div class="product-catalog-about__text">Каталог техники</div>
-                <div class="product-catalog-about__go-back">
-                    <div class="product-catalog-about__arrow">
-                        <a href="">
-                            <svg width="34" height="17" viewBox="0 0 34 17" fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <path d="M8 0.75249L7.10201e-07 8.87624L8 17L9.425 15.5783L3.825 9.89171L16 9.89172L16 7.86078L3.825 7.86078L9.425 2.17415L8 0.75249Z"
-                                      fill="#D82329"/>
-                                <rect x="34" y="9.8916" width="18" height="2.03094"
-                                      transform="rotate(-180 34 9.8916)" fill="#D82329"/>
-                            </svg>
-                        </a>
-
+                <a class="product-catalog-about__go-back">
+                    <div class="product-catalog-about__go-back-box">
+                        <div class="product-catalog-about__arrow">
+                            <div href="">
+                                <svg width="34" height="17" viewBox="0 0 34 17" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M8 0.75249L7.10201e-07 8.87624L8 17L9.425 15.5783L3.825 9.89171L16 9.89172L16 7.86078L3.825 7.86078L9.425 2.17415L8 0.75249Z"
+                                          fill="#D82329"/>
+                                    <rect x="34" y="9.8916" width="18" height="2.03094"
+                                          transform="rotate(-180 34 9.8916)" fill="#D82329"/>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="product-catalog-about__button" href="#">Вернуться к каталогу техники</div>
                     </div>
-                    <div class="product-catalog-about__button">Вернуться к каталогу техники</div>
-                </div>
+
+
+                </a>
             </div>
             <div class="product-catalog-about__content">
                 <div class="product-catalog-about__card-list">
-                    <div class="card">
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -46,11 +49,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -60,11 +61,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -74,11 +73,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -88,11 +85,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -102,11 +97,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -116,11 +109,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -130,11 +121,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -144,11 +133,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -158,11 +145,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -172,10 +157,8 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
                 </div>
             </div>
         </div>
