--- a/app/product-catalog-about.html
+++ b/app/product-catalog-about.html
@@ -42,11 +42,8 @@
             </div>
         </div>
         <nav class="header-black__sub-menu">
-            <div class="header-black__sub-menu-item-square">
-                <div class="sub-menu-item-square__title">
-                    <img src="img/header-black/03.png" alt="">
+            <div class="header-black__sub-menu-item header__sub-menu-item--square">
                     <a href="" class="header-black__link">Главная</a>
-                </div>
                 <div class="splitter"></div>
             </div>
             <div class="header-black__sub-menu-item">
@@ -143,25 +140,28 @@
         <div class="product-catalog-about page-padding">
             <div class="product-catalog-about__top">
                 <div class="product-catalog-about__text">Каталог техники</div>
-                <div class="product-catalog-about__go-back">
-                    <div class="product-catalog-about__arrow">
-                        <a href="">
-                            <svg width="34" height="17" viewBox="0 0 34 17" fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <path d="M8 0.75249L7.10201e-07 8.87624L8 17L9.425 15.5783L3.825 9.89171L16 9.89172L16 7.86078L3.825 7.86078L9.425 2.17415L8 0.75249Z"
-                                      fill="#D82329"/>
-                                <rect x="34" y="9.8916" width="18" height="2.03094"
-                                      transform="rotate(-180 34 9.8916)" fill="#D82329"/>
-                            </svg>
-                        </a>
-
+                <a class="product-catalog-about__go-back">
+                    <div class="product-catalog-about__go-back-box">
+                        <div class="product-catalog-about__arrow">
+                            <div href="">
+                                <svg width="34" height="17" viewBox="0 0 34 17" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M8 0.75249L7.10201e-07 8.87624L8 17L9.425 15.5783L3.825 9.89171L16 9.89172L16 7.86078L3.825 7.86078L9.425 2.17415L8 0.75249Z"
+                                          fill="#D82329"/>
+                                    <rect x="34" y="9.8916" width="18" height="2.03094"
+                                          transform="rotate(-180 34 9.8916)" fill="#D82329"/>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="product-catalog-about__button" href="#">Вернуться к каталогу техники</div>
                     </div>
-                    <div class="product-catalog-about__button">Вернуться к каталогу техники</div>
-                </div>
+
+
+                </a>
             </div>
             <div class="product-catalog-about__content">
                 <div class="product-catalog-about__card-list">
-                    <div class="card">
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -171,11 +171,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -185,11 +183,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -199,11 +195,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -213,11 +207,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -227,11 +219,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -241,11 +231,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -255,11 +243,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -269,11 +255,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -283,11 +267,9 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
-                    <div class="card">
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
+                    <a class="card" href="#">
                         <div class="card__img">
                             <img src="img/product-catalog/01.png" alt="">
                         </div>
@@ -297,10 +279,8 @@
                             as well as a random
                             Lipsum generator.
                         </div>
-                        <div class="card__link">
-                            <a href="">Смотреть подробнее</a>
-                        </div>
-                    </div>
+                        <p class="card__link" >Смотреть подробнее</p>
+                    </a>
                 </div>
             </div>
         </div>
@@ -336,11 +316,8 @@
         </div>
     </div>
     <nav class="footer__sub-menu">
-        <div class="footer__sub-menu-item-square">
-            <div class="sub-menu-item-square__title">
-                <img src="img/footer/03.png" alt="">
-                <a href="" class="footer__link">Главная</a>
-            </div>
+        <div class="footer__sub-menu-item footer__sub-menu-item--square">
+            <a href="" class="footer__link">Главная</a>
             <div class="splitter"></div>
         </div>
         <div class="footer__sub-menu-item">
