--- a/app/pages/product-catalog-about.html
+++ b/app/pages/product-catalog-about.html
@@ -18,7 +18,7 @@
         <div class="product-catalog-about page-padding">
             <div class="product-catalog-about__top">
                 <div class="product-catalog-about__text">Каталог техники</div>
-                <a class="product-catalog-about__go-back">
+                <a class="product-catalog-about__go-back" href="#">
                     <div class="product-catalog-about__go-back-box">
                         <div class="product-catalog-about__arrow">
                             <div href="">
@@ -31,10 +31,8 @@
                                 </svg>
                             </div>
                         </div>
-                        <div class="product-catalog-about__button" href="#">Вернуться к каталогу техники</div>
+                        <p>Вернуться к каталогу техники</p>
                     </div>
-
-
                 </a>
             </div>
             <div class="product-catalog-about__content">
