--- a/app/index.html
+++ b/app/index.html
@@ -304,9 +304,9 @@
     </div>
 </section>
 <section id="@@idScroll" class="main-about page-padding">
-    <div class="main-about__doc">
-        <img src="img/about/01.png" alt="">
-    </div>
+
+        <img class="main-about__doc"src="img/about/01.png" alt="">
+
     <div class="main-about__info">
         <div class="main-about__title">О компании</div>
         <div class="main-about__name">«ООО БУРОВЫЕ ТЕХНОЛОГИИ»</div>
@@ -334,8 +334,8 @@
                 высококвалифицированного оборудования.
             </div>
         </div>
-        <a href="" class="main-help__img">
-            <img src="img/help/01.png" alt="">
+        <a href="" class="main-help__link">
+            <img class="main-help__img" src="img/help/01.png" alt="">
         </a>
     </div>
 
@@ -394,9 +394,7 @@
         <section class="main-spare page-padding">
   <div class="main-spare__container">
     <img class="main-spare__img_back" src="img/spare/01.png" alt="">
-    <div class="main-spare__img">
-      <img src="img/spare/01.png" alt="">
-    </div>
+    <img class="main-spare__img"src="img/spare/01.png" alt="">
     <div class="main-spare__info">
       <div class="main-spare__title">Запасные части <br>
         и расходные<br>
@@ -416,19 +414,13 @@
         Больше о компании
     </div>
     <div class="main-about-big__info">
-        <ul class="main-about-big__list main-list">
-            <li class="main-list__item">
-                <div class="main-list__line_first">
-                    <svg width="647" height="2" viewBox="0 0 647 2" fill="none"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 1H647" stroke="#B3B3B3"/>
-                    </svg>
-                </div>
-                <div class="main-list__description">
-                    <div class="main-list__text"> Поставка оборудования для струйной цементации
+        <ul class="main-about-big__items">
+            <li class="main-about-big__item">
+                <a class="main-about-big__item-description">
+                    <div class="main-about-big__item-text"> Поставка оборудования для струйной цементации
                         «JET-GROUTING», цементациии и бурения
                     </div>
-                    <div class="main-list__arrow">
+                    <div class="main-about-big__item-arrow">
                         <svg width="34" height="17" viewBox="0 0 34 17" fill="none"
                              xmlns="http://www.w3.org/2000/svg">
                             <path d="M26 16.8784L34 8.75461L26 0.630859L24.575 2.05252L30.175 7.73915H18V9.77008H30.175L24.575 15.4567L26 16.8784Z"
@@ -436,19 +428,13 @@
                             <rect y="7.73926" width="18" height="2.03094" fill="#D82329"/>
                         </svg>
                     </div>
-                </div>
-
+                </a>
             </li>
-            <li class="main-list__item">
-                <div class="main-list__line">
-                    <svg width="647" height="2" viewBox="0 0 647 2" fill="none"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 1H647" stroke="#B3B3B3"/>
-                    </svg>
-                </div>
-                <div class="main-list__description">
-                    <div class="main-list__text"> История компании Tecniwell</div>
-                    <div class="main-list__arrow">
+            <li class="main-about-big__item">
+                <a class="main-about-big__item-description">
+                    <div class="main-about-big__item-text"> История компании Tecniwell
+                    </div>
+                    <div class="main-about-big__item-arrow">
                         <svg width="34" height="17" viewBox="0 0 34 17" fill="none"
                              xmlns="http://www.w3.org/2000/svg">
                             <path d="M26 16.8784L34 8.75461L26 0.630859L24.575 2.05252L30.175 7.73915H18V9.77008H30.175L24.575 15.4567L26 16.8784Z"
@@ -456,19 +442,13 @@
                             <rect y="7.73926" width="18" height="2.03094" fill="#D82329"/>
                         </svg>
                     </div>
-                </div>
-
-            </li>
-            <li class="main-list__item">
-                <div class="main-list__line">
-                    <svg width="647" height="2" viewBox="0 0 647 2" fill="none"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 1H647" stroke="#B3B3B3"/>
-                    </svg>
-                </div>
-                <div class="main-list__description">
-                    <div class="main-list__text"> Компетенция компании Tecniwell</div>
-                    <div class="main-list__arrow">
+                </a>
+            </li>            
+            <li class="main-about-big__item">
+                <a class="main-about-big__item-description">
+                    <div class="main-about-big__item-text"> Компетенция компании Tecniwell
+                    </div>
+                    <div class="main-about-big__item-arrow">
                         <svg width="34" height="17" viewBox="0 0 34 17" fill="none"
                              xmlns="http://www.w3.org/2000/svg">
                             <path d="M26 16.8784L34 8.75461L26 0.630859L24.575 2.05252L30.175 7.73915H18V9.77008H30.175L24.575 15.4567L26 16.8784Z"
@@ -476,19 +456,13 @@
                             <rect y="7.73926" width="18" height="2.03094" fill="#D82329"/>
                         </svg>
                     </div>
-                </div>
-
+                </a>
             </li>
-            <li class="main-list__item">
-                <div class="main-list__line">
-                    <svg width="647" height="2" viewBox="0 0 647 2" fill="none"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 1H647" stroke="#B3B3B3"/>
-                    </svg>
-                </div>
-                <div class="main-list__description">
-                    <div class="main-list__text"> Компетенция компании Tecniwell</div>
-                    <div class="main-list__arrow">
+            <li class="main-about-big__item">
+                <a class="main-about-big__item-description">
+                    <div class="main-about-big__item-text"> Компетенция компании Tecniwell
+                    </div>
+                    <div class="main-about-big__item-arrow">
                         <svg width="34" height="17" viewBox="0 0 34 17" fill="none"
                              xmlns="http://www.w3.org/2000/svg">
                             <path d="M26 16.8784L34 8.75461L26 0.630859L24.575 2.05252L30.175 7.73915H18V9.77008H30.175L24.575 15.4567L26 16.8784Z"
@@ -496,75 +470,51 @@
                             <rect y="7.73926" width="18" height="2.03094" fill="#D82329"/>
                         </svg>
                     </div>
-                </div>
-
+                </a>
             </li>
-            <div class="main-list__line_bottom">
-                <svg class="" width="647" height="2" viewBox="0 0 647 2" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 1H647" stroke="#B3B3B3"/>
-                </svg>
-            </div>
+            
         </ul>
-        <ul class="main-about-big__list_mobile">
-            <li class="main-list__item">
-                <div class="main-list__line_first">
-                    <svg width="100%" height="2" viewBox="0 0 647 2" fill="none"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 1H647" stroke="#B3B3B3"/>
-                    </svg>
-                </div>
-                <div class="main-list__description">
-                    <div class="main-list__text"> Поставка оборудования для струйной цементации
-                        «JET-GROUTING», цементациии и бурения
-                    </div>
-                    <a href="" class="main-list__link"> Подробнее</a>
-                </div>
-            </li>
-            <li class="main-list__item">
-                <div class="main-list__line">
-                    <svg width="100%" height="2" viewBox="0 0 647 2" fill="none"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 1H647" stroke="#B3B3B3"/>
-                    </svg>
-                </div>
-                <div class="main-list__description">
-                    <div class="main-list__text"> История компании Tecniwell</div>
-                    <a href="" class="main-list__link"> Подробнее</a>
-                </div>
 
+        <ul class="main-about-big__mobile">
+            <li class="main-about-big__item">
+                <div class="main-about-big__item-description"> Поставка оборудования для струйной цементации
+                    «JET-GROUTING», цементациии и бурения
+                </div>
+                <a class="main-about-big__item-link" href="#">
+                    Подробнее
+                </a>
             </li>
-            <li class="main-list__item">
-                <div class="main-list__line">
-                    <svg width="100%" height="2" viewBox="0 0 647 2" fill="none"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 1H647" stroke="#B3B3B3"/>
-                    </svg>
+            <li class="main-about-big__item">
+                <div class="main-about-big__item-description"> Поставка оборудования для струйной цементации
+                    «JET-GROUTING», цементациии и бурения
                 </div>
-                <div class="main-list__description">
-                    <div class="main-list__text"> Компетенция компании Tecniwell</div>
-                    <a href="" class="main-list__link"> Подробнее</a>
-                </div>
-
+                <a class="main-about-big__item-link" href="#">
+                    Подробнее
+                </a>
             </li>
-            <li class="main-list__item">
-                <div class="main-list__line">
-                    <svg width="100%" height="2" viewBox="0 0 647 2" fill="none"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 1H647" stroke="#B3B3B3"/>
-                    </svg>
+            <li class="main-about-big__item">
+                <div class="main-about-big__item-description"> Поставка оборудования для струйной цементации
+                    «JET-GROUTING», цементациии и бурения
                 </div>
-                <div class="main-list__description">
-                    <div class="main-list__text"> Компетенция компании Tecniwell</div>
-                    <a href="" class="main-list__link"> Подробнее</a>
+                <a class="main-about-big__item-link" href="#">
+                    Подробнее
+                </a>
+            </li>
+            <li class="main-about-big__item">
+                <div class="main-about-big__item-description">
+                    Поставка оборудования для струйной цементации
+                    «JET-GROUTING», цементациии и бурения
                 </div>
+                <a class="main-about-big__item-link" href="#">
+                    Подробнее
+                </a>
             </li>
         </ul>
 
-        <div class="main-about-big__img">
-            <img src="img/big_about/01.png" alt="">
-        </div>
+        <img class="main-about-big__img"src="img/big_about/01.png" alt="">     
+
     </div>
+    
 </section>
     </main>
     <footer class="footer page-padding @@class">
