--- a/app/pages/spare-parts.html
+++ b/app/pages/spare-parts.html
@@ -47,9 +47,7 @@
                 </tr>
                 <tr align="center">
                     <td class="spare-parts-page__card-name">
-                        <div class="card-name-spare__img">
-                            <img src="img/spare_frame/01.png" alt="">
-                        </div>
+                        <img class="card-name-spare__img"src="img/spare_frame/01.png" alt="">
                         <div class="card-name-spare__text">Название товара</div>
                     </td>
 
