--- a/app/pages/product-catalog-about.html
+++ b/app/pages/product-catalog-about.html
@@ -18,10 +18,10 @@
         <div class="product-catalog-about page-padding">
             <div class="product-catalog-about__top">
                 <div class="product-catalog-about__text">Каталог техники</div>
-                <a class="product-catalog-about__go-back" href="#">
+                <a class="product-catalog-about__go-back" href="/">
                     <div class="product-catalog-about__go-back-box">
                         <div class="product-catalog-about__arrow">
-                            <div href="">
+                            <div>
                                 <svg width="34" height="17" viewBox="0 0 34 17" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M8 0.75249L7.10201e-07 8.87624L8 17L9.425 15.5783L3.825 9.89171L16 9.89172L16 7.86078L3.825 7.86078L9.425 2.17415L8 0.75249Z"
