--- a/app/product-about.html
+++ b/app/product-about.html
@@ -14,8 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="wrapper">
-        <header class="header-black page-padding base">
+<div class="wrapper">
+    <header class="header-black page-padding base">
     <div class="header-black__inner">
         <div class="header-black__menu">
             <a href="" class="header-black__menu-logo">
@@ -24,9 +24,12 @@
             <div class="header-black__menu-mail">
                 <svg width="43" height="43" viewBox="0 0 43 43" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_611_54)">
-                        <path d="M27.8971 15.1943C28.3214 15.1943 28.7284 15.36 29.0284 15.6549C29.3285 15.9497 29.4971 16.3496 29.4971 16.7667V26.2005C29.4971 26.6176 29.3285 27.0175 29.0284 27.3123C28.7284 27.6072 28.3214 27.7729 27.8971 27.7729H15.0971C14.6727 27.7729 14.2658 27.6072 13.9657 27.3123C13.6656 27.0175 13.4971 26.6176 13.4971 26.2005V16.7667C13.4971 15.9019 14.2171 15.1943 15.0971 15.1943H27.8971ZM24.4011 22.3484L29.4971 26.2005V24.6282L25.4011 21.5622L29.4971 18.339V16.7667L21.4971 23.0559L13.4971 16.7667V18.339L17.5931 21.5622L13.4971 24.6282V26.2005L18.5931 22.3484L21.4971 24.6282L24.4011 22.3484Z" fill="#1D1717"/>
+                        <path d="M27.8971 15.1943C28.3214 15.1943 28.7284 15.36 29.0284 15.6549C29.3285 15.9497 29.4971 16.3496 29.4971 16.7667V26.2005C29.4971 26.6176 29.3285 27.0175 29.0284 27.3123C28.7284 27.6072 28.3214 27.7729 27.8971 27.7729H15.0971C14.6727 27.7729 14.2658 27.6072 13.9657 27.3123C13.6656 27.0175 13.4971 26.6176 13.4971 26.2005V16.7667C13.4971 15.9019 14.2171 15.1943 15.0971 15.1943H27.8971ZM24.4011 22.3484L29.4971 26.2005V24.6282L25.4011 21.5622L29.4971 18.339V16.7667L21.4971 23.0559L13.4971 16.7667V18.339L17.5931 21.5622L13.4971 24.6282V26.2005L18.5931 22.3484L21.4971 24.6282L24.4011 22.3484Z"
+                              fill="#1D1717"/>
                     </g>
-                    <path opacity="0.5" d="M41.9971 21.4838C41.9971 32.5968 32.8272 41.6205 21.4971 41.6205C10.167 41.6205 0.99707 32.5968 0.99707 21.4838C0.99707 10.3708 10.167 1.34717 21.4971 1.34717C32.8272 1.34717 41.9971 10.3708 41.9971 21.4838Z" stroke="#1D1717"/>
+                    <path opacity="0.5"
+                          d="M41.9971 21.4838C41.9971 32.5968 32.8272 41.6205 21.4971 41.6205C10.167 41.6205 0.99707 32.5968 0.99707 21.4838C0.99707 10.3708 10.167 1.34717 21.4971 1.34717C32.8272 1.34717 41.9971 10.3708 41.9971 21.4838Z"
+                          stroke="#1D1717"/>
                     <defs>
                         <clipPath id="clip0_611_54">
                             <rect width="16" height="15.7232" fill="black" transform="translate(13.4971 13.6221)"/>
@@ -37,15 +40,18 @@
             </div>
             <div class="header-black__menu-phone">
                 <svg width="43" height="43" viewBox="0 0 43 43" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path opacity="0.5" d="M41.998 21.4838C41.998 32.5968 32.8281 41.6205 21.498 41.6205C10.1679 41.6205 0.998047 32.5968 0.998047 21.4838C0.998047 10.3708 10.1679 1.34717 21.498 1.34717C32.8281 1.34717 41.998 10.3708 41.998 21.4838Z" stroke="#1D1717"/>
-                    <path d="M28.4976 26.1589V28.262C28.4984 28.4573 28.4583 28.6505 28.3797 28.8294C28.3012 29.0083 28.186 29.1689 28.0415 29.3009C27.8971 29.4329 27.7265 29.5334 27.5408 29.5959C27.3551 29.6585 27.1583 29.6817 26.9631 29.6641C24.797 29.4297 22.7163 28.6926 20.8883 27.5119C19.1875 26.4356 17.7455 24.9995 16.6648 23.3056C15.4751 21.4767 14.7348 19.3945 14.5038 17.2276C14.4862 17.0337 14.5093 16.8383 14.5717 16.6538C14.6341 16.4694 14.7343 16.2999 14.8661 16.1561C14.9979 16.0123 15.1583 15.8975 15.337 15.8188C15.5158 15.7402 15.7091 15.6995 15.9046 15.6993H18.0163C18.3579 15.6959 18.6891 15.8164 18.9481 16.0383C19.2071 16.2601 19.3763 16.5682 19.4241 16.9051C19.5133 17.5781 19.6786 18.239 19.9169 18.875C20.0116 19.1259 20.0321 19.3986 19.9759 19.6608C19.9198 19.923 19.7894 20.1636 19.6001 20.3542L18.7061 21.2446C19.7082 22.9997 21.1674 24.4529 22.9296 25.4508L23.8236 24.5605C24.015 24.372 24.2566 24.2421 24.5199 24.1862C24.7831 24.1303 25.0569 24.1507 25.3089 24.245C25.9475 24.4824 26.6111 24.647 27.2869 24.7358C27.6288 24.7838 27.9411 24.9553 28.1643 25.2177C28.3876 25.4801 28.5062 25.8151 28.4976 26.1589Z" fill="#1D1717"/>
+                    <path opacity="0.5"
+                          d="M41.998 21.4838C41.998 32.5968 32.8281 41.6205 21.498 41.6205C10.1679 41.6205 0.998047 32.5968 0.998047 21.4838C0.998047 10.3708 10.1679 1.34717 21.498 1.34717C32.8281 1.34717 41.998 10.3708 41.998 21.4838Z"
+                          stroke="#1D1717"/>
+                    <path d="M28.4976 26.1589V28.262C28.4984 28.4573 28.4583 28.6505 28.3797 28.8294C28.3012 29.0083 28.186 29.1689 28.0415 29.3009C27.8971 29.4329 27.7265 29.5334 27.5408 29.5959C27.3551 29.6585 27.1583 29.6817 26.9631 29.6641C24.797 29.4297 22.7163 28.6926 20.8883 27.5119C19.1875 26.4356 17.7455 24.9995 16.6648 23.3056C15.4751 21.4767 14.7348 19.3945 14.5038 17.2276C14.4862 17.0337 14.5093 16.8383 14.5717 16.6538C14.6341 16.4694 14.7343 16.2999 14.8661 16.1561C14.9979 16.0123 15.1583 15.8975 15.337 15.8188C15.5158 15.7402 15.7091 15.6995 15.9046 15.6993H18.0163C18.3579 15.6959 18.6891 15.8164 18.9481 16.0383C19.2071 16.2601 19.3763 16.5682 19.4241 16.9051C19.5133 17.5781 19.6786 18.239 19.9169 18.875C20.0116 19.1259 20.0321 19.3986 19.9759 19.6608C19.9198 19.923 19.7894 20.1636 19.6001 20.3542L18.7061 21.2446C19.7082 22.9997 21.1674 24.4529 22.9296 25.4508L23.8236 24.5605C24.015 24.372 24.2566 24.2421 24.5199 24.1862C24.7831 24.1303 25.0569 24.1507 25.3089 24.245C25.9475 24.4824 26.6111 24.647 27.2869 24.7358C27.6288 24.7838 27.9411 24.9553 28.1643 25.2177C28.3876 25.4801 28.5062 25.8151 28.4976 26.1589Z"
+                          fill="#1D1717"/>
                 </svg>
                 <a class="header-black__phone" href="tel:(+39) 0523 524086">(+39) 0523 524086</a>
             </div>
         </div>
         <nav class="header-black__sub-menu">
             <div class="header-black__sub-menu-item header__sub-menu-item--square">
-                    <a href="" class="header-black__link">Главная</a>
+                <a href="" class="header-black__link">Главная</a>
                 <div class="splitter"></div>
             </div>
             <div class="header-black__sub-menu-item">
@@ -87,7 +93,8 @@
             </div>
         </div>
         <div class="header-black__right">
-            <svg class="modal__burger" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="modal__burger" width="34" height="34" viewBox="0 0 34 34" fill="none"
+                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M4.25 17H29.75" stroke="black" stroke-width="2" stroke-linecap="square"
                       stroke-linejoin="round"/>
                 <path d="M4.25 8.5H29.75" stroke="black" stroke-width="2" stroke-linecap="square"
@@ -129,45 +136,97 @@
     </div>
 </div>
 <script>
-    document.getElementsByClassName("modal__burger")[0].addEventListener("click", ()=> {
-        document.getElementById("burgerIndex").classList.add("open")
-        document.getElementsByClassName("modal")[0].style.zIndex = "101"
+    document.getElementsByClassName('modal__burger')[0].addEventListener('click', () => {
+        document.getElementById('burgerIndex').classList.add('open')
+        document.getElementsByClassName('modal')[0].style.zIndex = '101'
     })
-    document.getElementsByClassName("modal__back")[0].addEventListener("click", ()=> {
-        document.getElementsByClassName("modal")[0].style.zIndex = "-1"
-        document.getElementById("burgerIndex").classList.remove("open")
+    document.getElementsByClassName('modal__back')[0].addEventListener('click', () => {
+        document.getElementsByClassName('modal')[0].style.zIndex = '-1'
+        document.getElementById('burgerIndex').classList.remove('open')
     })
 </script>
-        <main class="main">
-            <div class="_container">
-                <div class="product-about-wrapper">
-                    <div class="product-about-wrapper__name">
-                        <img class="product-about-wrapper__img product-about-image"src="img/product-information/1.png" alt="">
-                        <div class="product-about-wrapper__info">
+    <div id="popupIndex" class="popup">
+    <div class="popup__back"></div>
+    <div class="popup__base">
+        <div class="popup__cross">
+            <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1L22 22" stroke="white" stroke-width="2.37736"/>
+                <path d="M22 1L1 22" stroke="white" stroke-width="2.37736"/>
+            </svg>
+        </div>
+        <div class="popup__items">
+            <div class="popup__item">
+                <label for="inputName">Ваше имя</label>
+                <input id="inputName" class="popup__input" placeholder="Введите ваше имя" />
+            </div>
+            <div class="popup__item">
+                <label for="inputEmail">E-mail</label>
+                <input id="inputEmail" class="popup__input" placeholder="Введите ваш e-mail" />
+            </div>
+            <div class="popup__item">
+                <label for="inputPhone">Ваш телефон</label>
+                <input id="inputPhone" class="popup__input" placeholder="Введите ваш телефон" />
+            </div>
+            <div class="popup__item">
+                <button class="popup__send">
+                    Оставить заявку
+                </button>
+            </div>
+            <div class="popup__item">
+                <p class="popup__helper-text">
+                    Нажимая на кнопку, Вы принимаете Положение и Согласие на обработку персональных данных
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        document.getElementsByClassName('popup__button')[0].addEventListener('click', () => {
+            document.getElementById('popupIndex').classList.add('open')
+            document.getElementsByClassName('popup')[0].style.zIndex = '101'
+        })
+
+        document.getElementsByClassName('popup__back')[0].addEventListener('click', () => {
+            document.getElementById('popupIndex').classList.remove('open')
+            document.getElementsByClassName('popup')[0].style.zIndex = '-1'
+        })
+
+        document.getElementsByClassName('popup__cross')[0].addEventListener('click', () => {
+            document.getElementById('popupIndex').classList.remove('open')
+            document.getElementsByClassName('popup')[0].style.zIndex = '-1'
+        })
+    })
+</script>
+    <main class="main">
+        <div class="_container">
+            <div class="product-about-wrapper">
+                <div class="product-about-wrapper__name">
+                    <img class="product-about-wrapper__img product-about-image" src="img/product-information/1.png"
+                         alt="">
+                    <div class="product-about-wrapper__info">
                         <div class="product-about-wrapper__title">Название товара</div>
                         <div class="product-about-wrapper__text">Lorem Ipsum has been the industry's
-                                standard dummy text ever since the 1500s,
-                                when an unknown printer took a galley of
-                                type and scrambled it to make a type
-                                specimen book. It has survived not only
-                                five centuries, but also the leap into
-                                electronic typesetting,
+                            standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley of
+                            type and scrambled it to make a type
+                            specimen book. It has survived not only
+                            five centuries, but also the leap into
+                            electronic typesetting,
                         </div>
-                        <a class="product-about-wrapper__button" href="#">Оставить заявку</a>
+                        <a class="product-about-wrapper__button popup__button" href="#">Оставить заявку</a>
                     </div>
-                    </div>
+                </div>
 
-                </div>
-                <div class="product-about-wrapper__images">
-                    <img  class="product-about-image" src="img/product-information/2.png" alt="">
-                    <img  class="product-about-image"  src="img/product-information/3.png" alt="">
-                </div>
-                <img class="product-about-wrapper__document"  src="img/product-information/4.png" alt="">
-
-                </div>
             </div>
-        </main>
-        <footer class="footer page-padding @@class">
+            <div class="product-about-wrapper__images">
+                <img class="product-about-image" src="img/product-information/2.png" alt="">
+                <img class="product-about-image" src="img/product-information/3.png" alt="">
+            </div>
+            <img class="product-about-wrapper__document" src="img/product-information/4.png" alt="">
+        </div>
+    </main>
+    <footer class="footer page-padding @@class">
     <div class="footer__menu">
         <a href="/" class="footer__menu-logo"><img src="img/footer/logo-footer.svg" alt=""></a>
         <div class="footer__menu-phone">
@@ -220,6 +279,6 @@
         </div>
     </nav>
 </footer>
-    </div>
+</div>
 </body>
 </html>
