--- a/app/pages/product-catalog.html
+++ b/app/pages/product-catalog.html
@@ -13,7 +13,7 @@
 <div class="wrapper">
     @@include('../components/header-black.html', {"class": "base"})
     <main class="main">
-        <div class="_container">
+        <div class="page-padding">
             <div class="product-catalog">
                 <div class="product-catalog__top">
                     <p>Каталог техники</p>
