--- a/app/product-catalog.html
+++ b/app/product-catalog.html
@@ -142,7 +142,7 @@
     })
 </script>
     <main class="main">
-        <div class="_container">
+        <div class="page-padding">
             <div class="product-catalog">
                 <div class="product-catalog__top">
                     <p>Каталог техники</p>
