--- a/app/product-about.html
+++ b/app/product-about.html
@@ -202,8 +202,10 @@
         <div class="_container">
             <div class="product-about-wrapper">
                 <div class="product-about-wrapper__name">
-                    <img class="product-about-wrapper__img product-about-image" src="img/product-information/1.png"
+                    <div class="product-about-wrapper__img product-about-image">
+                        <img src="img/product-information/1.png"
                          alt="">
+                    </div>
                     <div class="product-about-wrapper__info">
                         <div class="product-about-wrapper__title">Название товара</div>
                         <div class="product-about-wrapper__text">Lorem Ipsum has been the industry's
@@ -219,11 +221,12 @@
                 </div>
 
             </div>
-            <div class="product-about-wrapper__images">
-                <img class="product-about-image" src="img/product-information/2.png" alt="">
-                <img class="product-about-image" src="img/product-information/3.png" alt="">
+            <div class="product-about-wrapper__images-list">
+                <div class="product-about-wrapper__images-list-img"><img src="img/product-information/2.png" alt=""></div>
+                <div class="product-about-wrapper__images-list-img"><img src="img/product-information/3.png" alt=""></div>
             </div>
-            <img class="product-about-wrapper__document" src="img/product-information/4.png" alt="">
+            <div class="product-about-wrapper__document"><img class="" src="img/product-information/4.png" alt=""></div>
+            
         </div>
     </main>
     <footer class="footer page-padding @@class">
