--- a/app/product-catalog-about.html
+++ b/app/product-catalog-about.html
@@ -5,19 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<!--    <link rel="stylesheet" href="css/reset.css">-->
-<!--    <link rel="stylesheet" href="css/_global.css">-->
-    <link rel="stylesheet" href="css/style.min.css">
-
     <title>Document</title>
+    <!--    <link rel="stylesheet" href="css/reset.css">-->
+    <!--    <link rel="stylesheet" href="css/_global.css">-->
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
     <header class="header-black page-padding base">
     <div class="header-black__inner">
         <div class="header-black__menu">
-            <a href="" class="header-black__menu-logo">
+            <a href="/" class="header-black__menu-logo">
                 <img src="img/header-black/logo.svg" alt="">
+            </a>
+            <a href="" class="header-black__menu-text_top">
+                Оборудование для струйной цементации и бурения
             </a>
             <div class="header-black__menu-mail">
                 <svg width="43" height="43" viewBox="0 0 43 43" fill="none" xmlns="http://www.w3.org/2000/svg">
