--- a/app/product-about.html
+++ b/app/product-about.html
@@ -201,7 +201,7 @@
         })
     })
 </script>
-    <main class="main">
+    <main class="main page-padding">
         <div class="_container">
             <div class="product-about-wrapper">
                 <div class="product-about-wrapper__name">
@@ -223,8 +223,8 @@
 
             </div>
             <div class="product-about-wrapper__images">
-                <img class="product-about-image" src="img/product-information/2.png" alt="">
-                <img class="product-about-image" src="img/product-information/3.png" alt="">
+                <img class="product-about-wrapper-image" src="img/product-information/2.png" alt="">
+                <img class="product-about-wrapper-image" src="img/product-information/3.png" alt="">
             </div>
             <img class="product-about-wrapper__document" src="img/product-information/4.png" alt="">
         </div>
