--- a/app/index.html
+++ b/app/index.html
@@ -201,7 +201,7 @@
     </section>
     <section class="main-experience">
         <div class="main-experience__inner page-padding">
-            <div class="main-experience__left">
+<!--            <div class="main-experience__left">-->
                 <!--                <div class="main-experience__title">-->
                 <!--                    <div class="main-experience__numbers">20 лет</div>-->
                 <!--                    <div class="main-experience__plus">-->
@@ -211,7 +211,7 @@
                 <!--                <div class="main-experience__sub-title">-->
                 <!--                    Компания на рынке-->
                 <!--                </div>-->
-            </div>
+<!--            </div>-->
             <div class="main-experience__right">
                 <div class="main-experience__text">Более 20 лет наша компания - единственный
                     официальный дилер Tecniwell - представляет итальянского производителя оборудования на рынках России
