--- a/app/spare-parts.html
+++ b/app/spare-parts.html
@@ -173,9 +173,6 @@
                 <tr align="center">
                     <th class="spare-title-category__category">Название запчасти</th>
                     <th class="spare-title-category__category">Параметр 1</th>
-                    <th class="spare-title-category__category">Параметр 2</th>
-                    <th class="spare-title-category__category">Параметр 3</th>
-                    <th class="spare-title-category__category">Параметр 4</th>
                 </tr>
                 <tr align="center">
                     <td class="spare-parts-page__card-name">
@@ -184,9 +181,6 @@
                     </td>
 
                     <td class="spare-parts-page__category"><div class="spare-parts-page__selected">Lorem</div></td>
-                    <td class="spare-parts-page__category">Lorem</td>
-                    <td class="spare-parts-page__category">Lorem</td>
-                    <td class="spare-parts-page__category">Lorem</td>
                 </tr>
             </table>
             <div class="spare-parts-page__wrapper_mobile">
@@ -198,11 +192,11 @@
     <div class="card-name-spare__text">Название товара</div>
   </div>
   <div class="spare-parts-page__selected">Первый параметр</div>
-  <div class="spare-parts-page__wrapper__card-params">
-    <div>Параметр 1: Lorem</div>
-    <div>Параметр 2: Lorem</div>
-    <div>Параметр 3: Lorem</div>
-  </div>
+<!--  <div class="spare-parts-page__wrapper__card-params">-->
+<!--    <div>Параметр 1: Lorem</div>-->
+<!--    <div>Параметр 2: Lorem</div>-->
+<!--    <div>Параметр 3: Lorem</div>-->
+<!--  </div>-->
 </div>
             </div>
         </div>
