--- a/app/pages/spare-parts.html
+++ b/app/pages/spare-parts.html
@@ -54,6 +54,9 @@
             <div class="spare-parts-page__wrapper_mobile">
                 @@include('../components/spare-parts/spare-card.html')
             </div>
+            <div class="spare-parts-page__pagination">
+                @@include('../components/paginator.html')
+            </div>
         </div>
     </main>
     @@include('../components/footer.html')
