--- a/app/product-catalog.html
+++ b/app/product-catalog.html
@@ -147,7 +147,7 @@
         document.getElementById('burgerIndex').classList.remove('open')
     })
 </script>
-    <main class="main">
+    <main class="main product-catalog__wrapper">
         <div class="page-padding">
             <div class="product-catalog">
                 <div class="product-catalog__top">
@@ -156,44 +156,55 @@
                 <div class="product-catalog__wrapper">
                     <div class="product-catalog__card-lists">
                         <a class="product-catalog__card" href="#">
-                            <img class="product-catalog__img"src="img/product-catalog/1.png" alt="">
+                            <img class="product-catalog__img" src="img/product-catalog/1.png" alt="">
                             <div class="product-catalog__title">Триплексные насосы</div>
                         </a>
                         <a class="product-catalog__card" href="#">
-                            <img class="product-catalog__img"src="img/product-catalog/2.png" alt="">
+                            <img class="product-catalog__img" src="img/product-catalog/2.png" alt="">
                             <div class="product-catalog__title">Смесительные агрегаты</div>
                         </a>
                         <a class="product-catalog__card" href="#">
-                            <img class="product-catalog__img"src="img/product-catalog/3.png" alt="">
+                            <img class="product-catalog__img" src="img/product-catalog/3.png" alt="">
                             <div class="product-catalog__title">Компактные системы
                                 для струйной цементации
                                 Jet Grouting
                             </div>
                         </a>
                         <a class="product-catalog__card" href="#">
-                            <img class="product-catalog__img"src="img/product-catalog/4.png" alt="">
+                            <img class="product-catalog__img" src="img/product-catalog/4.png" alt="">
                             <div class="product-catalog__title">Инъекционные агрегаты</div>
                         </a>
                         <a class="product-catalog__card" href="#">
-                            <img class="product-catalog__img"src="img/product-catalog/5.png" alt="">
+                            <img class="product-catalog__img" src="img/product-catalog/5.png" alt="">
                             <div class="product-catalog__title">Триплексные насосы</div>
                         </a>
                         <a class="product-catalog__card" href="#">
-                            <img class="product-catalog__img"src="img/product-catalog/6.png" alt="">
+                            <img class="product-catalog__img" src="img/product-catalog/6.png" alt="">
                             <div class="product-catalog__title">Контейнерные инъекционные агрегаты</div>
                         </a>
                         <a class="product-catalog__card" href="#">
-                            <img class="product-catalog__img"src="img/product-catalog/7.png" alt="">
+                            <img class="product-catalog__img" src="img/product-catalog/7.png" alt="">
                             <div class="product-catalog__title">Силосы для сыпучих материалов</div>
                         </a>
                         <a class="product-catalog__card" href="#">
-                            <img class="product-catalog__img"src="img/product-catalog/8.png" alt="">
+                            <img class="product-catalog__img" src="img/product-catalog/8.png" alt="">
                             <div class="product-catalog__title">Буровая колонна</div>
                         </a>
-                        </div>
                     </div>
                 </div>
             </div>
+            <div class="pagination__wrapper">
+    <div class="pagination">
+        <a href="#">«</a>
+        <a href="#">1</a>
+        <a href="#" class="active">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+        <a href="#">6</a>
+        <a href="#">»</a>
+    </div>
+</div>
         </div>
     </main>
     <footer class="footer page-padding @@class">
