--- a/app/spare-parts.html
+++ b/app/spare-parts.html
@@ -199,6 +199,20 @@
 <!--  </div>-->
 </div>
             </div>
+            <div class="spare-parts-page__pagination">
+                <div class="pagination__wrapper">
+    <div class="pagination">
+        <a href="#">«</a>
+        <a href="#">1</a>
+        <a href="#" class="active">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+        <a href="#">6</a>
+        <a href="#">»</a>
+    </div>
+</div>
+            </div>
         </div>
     </main>
     <footer class="footer page-padding @@class">
