--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 <!--    <link rel="stylesheet" href="css/reset.css">-->
     <link rel="stylesheet" href="css/style.min.css">
-<!--    <link rel="stylesheet" href="css/_global.css">-->
+    <link rel="icon" href="../img/favicon.svg">
+    <!--    <link rel="stylesheet" href="css/_global.css">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -197,7 +198,9 @@
         <div class="main-application__text">Tecniwell - мировой лидер в разработке и производстве оборудования для
             струйной цементации, цементации и смесительных установок
         </div>
-        <a class="main-application__button popup__button">Оставить заявку</a>
+        <div class="main-application__button-wrapper">
+            <a class="main-application__button popup__button">Оставить заявку</a>
+        </div>
     </section>
     <section class="main-experience">
         <div class="main-experience__inner page-padding">
