--- a/app/spare-parts.html
+++ b/app/spare-parts.html
@@ -7,6 +7,7 @@
 
 <!--    <link rel="stylesheet" href="css/reset.css">-->
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="icon" href="../img/favicon.svg">
 <!--    <link rel="stylesheet" href="css/_global.css">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -182,8 +183,30 @@
 
                     <td class="spare-parts-page__category"><div class="spare-parts-page__selected">Lorem</div></td>
                 </tr>
+                <tr>
+                    <td class="spare-parts-page__card-name">
+                        <img class="card-name-spare__img"src="img/spare_frame/01.png" alt="">
+                        <div class="card-name-spare__text">Название товара</div>
+                    </td>
+
+                    <td class="spare-parts-page__category"><div class="spare-parts-page__selected">Lorem</div></td>
+                </tr>
             </table>
             <div class="spare-parts-page__wrapper_mobile">
+                <div class="spare-parts-page__wrapper__card">
+  <div class="spare-parts-page__wrapper__card-top">
+    <div class="card-name-spare__img">
+      <img src="img/spare_frame/01.png" alt="">
+    </div>
+    <div class="card-name-spare__text">Название товара</div>
+  </div>
+  <div class="spare-parts-page__selected">Первый параметр</div>
+<!--  <div class="spare-parts-page__wrapper__card-params">-->
+<!--    <div>Параметр 1: Lorem</div>-->
+<!--    <div>Параметр 2: Lorem</div>-->
+<!--    <div>Параметр 3: Lorem</div>-->
+<!--  </div>-->
+</div>
                 <div class="spare-parts-page__wrapper__card">
   <div class="spare-parts-page__wrapper__card-top">
     <div class="card-name-spare__img">
