--- a/app/pages/news.html
+++ b/app/pages/news.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 <!--    <link rel="stylesheet" href="css/reset.css">-->
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="icon" href="../img/favicon.svg">
 <!--    <link rel="stylesheet" href="css/_global.css">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
