--- a/app/pages/product-catalog-about.html
+++ b/app/pages/product-catalog-about.html
@@ -9,6 +9,7 @@
     <!--    <link rel="stylesheet" href="css/reset.css">-->
     <!--    <link rel="stylesheet" href="css/_global.css">-->
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="icon" href="../img/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
