--- a/app/pages/spare-parts.html
+++ b/app/pages/spare-parts.html
@@ -7,6 +7,7 @@
 
 <!--    <link rel="stylesheet" href="css/reset.css">-->
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="icon" href="../img/favicon.svg">
 <!--    <link rel="stylesheet" href="css/_global.css">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,8 +51,17 @@
 
                     <td class="spare-parts-page__category"><div class="spare-parts-page__selected">Lorem</div></td>
                 </tr>
+                <tr>
+                    <td class="spare-parts-page__card-name">
+                        <img class="card-name-spare__img"src="img/spare_frame/01.png" alt="">
+                        <div class="card-name-spare__text">Название товара</div>
+                    </td>
+
+                    <td class="spare-parts-page__category"><div class="spare-parts-page__selected">Lorem</div></td>
+                </tr>
             </table>
             <div class="spare-parts-page__wrapper_mobile">
+                @@include('../components/spare-parts/spare-card.html')
                 @@include('../components/spare-parts/spare-card.html')
             </div>
             <div class="spare-parts-page__pagination">
