--- a/app/index.html
+++ b/app/index.html
@@ -328,7 +328,7 @@
         <div class="main-help__info">
             <div class="main-help__title">Помощь заказчикам
                 в реализации строительных
-                задач разного уровня сложности
+                задач разных уровней сложности
             </div>
             <div class="main-help__text">В том числе, связанных с грунтовой инъекцией, цементацией, струйной цементацией
                 Jet grouting, устройством грунтовых анкеров, свай, противофильтрационных завес, пригрузов, закрепления
@@ -404,7 +404,7 @@
       </div>
       <div class="main-spare__text">Компания «Буровые технологии» представляет Вашему
         вниманию каталог запасных частей и расходных
-        материалов, доступных к заказу»
+        материалов, доступных к заказу
       </div>
       <a class="main-spare__button" href="">Перейти в каталог запчастей</a>
 
