--- a/app/pages/spare-parts.html
+++ b/app/pages/spare-parts.html
@@ -45,7 +45,7 @@
                 </tr>
                 <tr>
                     <td class="spare-parts-page__card-name">
-                        <img class="card-name-spare__img"src="img/spare_frame/01.png" alt="">
+<!--                        <img class="card-name-spare__img"src="img/spare_frame/01.png" alt="">-->
                         <div class="card-name-spare__text">Название товара</div>
                     </td>
 
@@ -53,7 +53,7 @@
                 </tr>
                 <tr>
                     <td class="spare-parts-page__card-name">
-                        <img class="card-name-spare__img"src="img/spare_frame/01.png" alt="">
+<!--                        <img class="card-name-spare__img"src="img/spare_frame/01.png" alt="">-->
                         <div class="card-name-spare__text">Название товара</div>
                     </td>
 
