--- a/app/spare-parts.html
+++ b/app/spare-parts.html
@@ -177,7 +177,7 @@
                 </tr>
                 <tr>
                     <td class="spare-parts-page__card-name">
-                        <img class="card-name-spare__img"src="img/spare_frame/01.png" alt="">
+<!--                        <img class="card-name-spare__img"src="img/spare_frame/01.png" alt="">-->
                         <div class="card-name-spare__text">Название товара</div>
                     </td>
 
@@ -185,7 +185,7 @@
                 </tr>
                 <tr>
                     <td class="spare-parts-page__card-name">
-                        <img class="card-name-spare__img"src="img/spare_frame/01.png" alt="">
+<!--                        <img class="card-name-spare__img"src="img/spare_frame/01.png" alt="">-->
                         <div class="card-name-spare__text">Название товара</div>
                     </td>
 
@@ -195,9 +195,9 @@
             <div class="spare-parts-page__wrapper_mobile">
                 <div class="spare-parts-page__wrapper__card">
   <div class="spare-parts-page__wrapper__card-top">
-    <div class="card-name-spare__img">
-      <img src="img/spare_frame/01.png" alt="">
-    </div>
+<!--    <div class="card-name-spare__img">-->
+<!--      <img src="img/spare_frame/01.png" alt="">-->
+<!--    </div>-->
     <div class="card-name-spare__text">Название товара</div>
   </div>
   <div class="spare-parts-page__selected">Первый параметр</div>
@@ -209,9 +209,9 @@
 </div>
                 <div class="spare-parts-page__wrapper__card">
   <div class="spare-parts-page__wrapper__card-top">
-    <div class="card-name-spare__img">
-      <img src="img/spare_frame/01.png" alt="">
-    </div>
+<!--    <div class="card-name-spare__img">-->
+<!--      <img src="img/spare_frame/01.png" alt="">-->
+<!--    </div>-->
     <div class="card-name-spare__text">Название товара</div>
   </div>
   <div class="spare-parts-page__selected">Первый параметр</div>
