--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,10 @@
 
     <link
             rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+            href="../build/css/pages/swiper-bundle.min.css"
     />
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="../build/js/swiper-bundle.min.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -450,7 +450,6 @@
 </style>
 
 <script type="module">
-    import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.esm.browser.min.js'
 
     const swiper = new Swiper('.swiper', {
         // Optional parameters
